--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Breakout</title>
     <style>
         * {
+            font-family: Arial, Helvetica, sans-serif;
             padding: 0;
             margin: 0;
         }
@@ -36,13 +37,26 @@
             font-size: 20px;
             top: 0px;
             left: 0px;
+            width: 120px;
+            color: #646194;
+            word-wrap: normal;
+            text-shadow: 0px 0 2px #9995DD;
+            z-index: 1;
+        }
+
+        #ms {
+            display: block;
+            position: absolute;
+            font-size: 12px;
+            top: 308px;
+            left: 0px;
             width: 100px;
             color: #9995DD;
             word-wrap: normal;
+            z-index: 1;
         }
 
         #bigText {
-            font-family: Arial, Helvetica, sans-serif;
             font-size: 50px;
             display: block;
             position: absolute;
@@ -64,7 +78,6 @@
         }
 
         #subText {
-            font-family: Arial, Helvetica, sans-serif;
             position: absolute;
             display: block;
             font-size: 30px;
@@ -105,6 +118,7 @@
         <div id="bigText"></div>
         <div id="subText"></div>
         <div id="hud"></div>
+        <div id="ms"></div>
     </div>
 
     <script src="breakout.js"> </script>
