todo: side block collision, pause screen options and SVG

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
         #gameWindow {
             background: #eee;
-            display: block;
-            margin: 0 auto;
+            display: flex;
             position: relative;
+            margin: 10% auto;
             width: 480px;
             height: 320px;
         }
