EDGE COLLISION WOOOO

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         #paddle {
             position: absolute;
             background-color: #0026ff;
+            border-radius: 20%;
         }
 
         #hud {
