--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
 
         #ball {
             position: absolute;
-            background-color: #004fd7;
+            background-image: url('assets/ball.svg');
             border-radius: 50%;
+            will-change: auto;
         }
 
         #paddle {
             position: absolute;
             background-color: #0026ff;
             border-radius: 20%;
+            will-change: auto;
         }
 
         #hud {
@@ -46,13 +48,13 @@
         }
 
         #mscontainer {
-            display: none;
+            display: block;
             position: absolute;
             font-size: 12px;
             top: 308px;
             left: 0px;
             width: 100px;
-            color: #9995DD;
+            color: #002aff;
             word-wrap: normal;
             z-index: 1;
         }
@@ -104,12 +106,15 @@
         }
         .brick[health="1"] {
             background-color: #0095DD;
+            background-image: url('assets/brick.svg');
         }
         .brick[health="2"] {
             background-color: #DD0095;
+            background-image: url('assets/brick.svg');
         }
         .brick[health="3"] {
             background-color: #9500DD;
+            background-image: url('assets/brick.svg');
         }
     </style>
 </head>
